--- a/resources/style.css
+++ b/resources/style.css
@@ -1,13 +1,15 @@
-h1{
+#large-title{
   font-family: Helvetica;
   font-size: 70px;
   font-weight:bold;
   color: white;
 }
 
-.head {
-  background-image: url ("../images/thebuilding.png");
+large-title,
+.header {
+background-image: url ("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
+
 .header {
   font-family: Helvetica;
   font-size: 18px;
