--- a/resources/style.css
+++ b/resources/style.css
@@ -5,7 +5,7 @@
   color: white;
 }
 
-large-title,
+#large-title,
 .header {
 background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
