--- a/resources/style.css
+++ b/resources/style.css
@@ -5,8 +5,7 @@
   color: white;
 }
 
-#large-title,
-.header {
+.image {
 background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 
