--- a/resources/style.css
+++ b/resources/style.css
@@ -6,7 +6,7 @@
 }
 
 #large-title,
-'header'{
+.header{
 background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 
