--- a/resources/style.css
+++ b/resources/style.css
@@ -5,8 +5,7 @@
   color: white;
 }
 
-#large-title,
-.header{
+.image {
 background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 
@@ -23,7 +22,7 @@ background-image: url("https://s3.amazonaws.com/codecademy-content/programs/free
   color: white;
   background-color: dimgray;
 }
- footer a{
+footer a{
    margin: 0 0.2em;
    text-decoration:none;
    color:inherit;
