--- a/resources/style.css
+++ b/resources/style.css
@@ -39,7 +39,12 @@ h3{
   font-size: 11px;
   color: white;
 }
-
+.New-York{
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
 .bottom{
   display:flex;
   font-family: Helvetica;
