--- a/resources/style.css
+++ b/resources/style.css
@@ -1,7 +1,3 @@
-html{
-  margin: auto;
-}
-
 #large-title{
   font-family: Helvetica;
   font-size: 70px;
@@ -24,6 +20,7 @@ background-image: url("https://s3.amazonaws.com/codecademy-content/programs/free
 body{
   text-align: center;
   font-family: Helvetica;
+  margin: auto;
 }
 
 h2{
@@ -47,7 +44,7 @@ h3{
   font-size: 23px;
   font-weight: bold;
   color: white;
-  background-image: url("");
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 .bottom{
   display:flex;
