--- a/resources/style.css
+++ b/resources/style.css
@@ -54,7 +54,7 @@ h3{
   background-color: dimgray;
 }
 footer a{
-   margin: 0 0.2em;
-   text-decoration:none;
+   margin: 0 0.02em;
+   text-decoration:underline;
    color:inherit;
  }
