--- a/resources/style.css
+++ b/resources/style.css
@@ -15,6 +15,7 @@ background-image: url("https://s3.amazonaws.com/codecademy-content/programs/free
   font-size: 18px;
   color: white;
   text-align: center;
+  font-weight: bold;
 }
 
 body{
@@ -45,6 +46,8 @@ h3{
   font-weight: bold;
   color: white;
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  background-repeat: no-repeat;
+  background-size: 90% 100%;
 }
 .bottom{
   display:flex;
@@ -52,6 +55,7 @@ h3{
   font-size: 18px;
   color: white;
   background-color: dimgray;
+  font-weight: bold;
 }
 footer a{
    margin: 0 0.02em;
