--- a/resources/style.css
+++ b/resources/style.css
@@ -46,7 +46,7 @@ h3{
   font-weight: bold;
   color: white;
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
-  background-size: 98% 100%;
+  background-size: cover;
 }
 .bottom{
   display:flex;
